--- a/config/database.yml
+++ b/config/database.yml
@@ -8,9 +8,9 @@ default: &default
   adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
-  username: kondor
+  host: db
+  username: postgres
   password:
-  host: localhost
 
 development:
   <<: *default
