--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,20 @@
-app:
-  build: .
-  command: rails server -p 3000 -b '0.0.0.0'
-  volumes:
-    - .:/app
-  ports:
-    - "3000:3000"
-  links:
-    - postgres
-postgres:
-  image: postgres:9.4
-  ports:
-    - "5432"
+version: '3'
+services:
+  db:
+    image: postgres
+  web:
+    build: .
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    volumes:
+      - .:/myapp
+    ports:
+      - "3000:3000"
+    environment:
+      - ELASTICSEARCH_URL=elasticsearch
+    depends_on:
+      - db
+      - elasticsearch
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.4.2
+    ports:
+      - "9200:9200"
